# wow284

./: .gitattributes  .gitignore  BUILD_VERIFICATION.txt  CITATION.cff  LICENSE_SCOPE.md  MANIFEST.txt  Makefile  PROVENANCE.md  README.md  REVIEW.md  SHA256SUMS  SOURCE_LEDGER.md  SUBMISSION_MANIFEST.txt  SUBMISSION_NOTES.md  build.ps1  build.sh  cover_letter_template.md  latexmkrc  main.bbl  main.tex  manuscript.md  pyproject.toml  references.bib
arxiv/: README.md  main.bbl  main.md  main.tex  references.bib
data/: lean_static_audit.txt  thirty_eight_sylvester.json
lean/: NON50_CERTIFICATES.md  README.md  Wow284.lean  Wow284Extended.lean  Wow284ExtensionAudit.lean  lake-manifest.json  lakefile.lean  lakefile.toml
research-notes/: CLAIM_REGISTRY.md  DEEP_LITERATURE_AUDIT_NEXT_DIRECTIONS.md  DEGREE_SIX_GATE_CLOSURE.md  EQUALITY_BOUNDARY.md  EXTENSION_EXPLORATION_QUEUE.md  FLOAT_PROOF_PATH_AUDIT.md  JORGENSEN96_PROVENANCE.md  LITERATURE_AUDIT_EXTENSIONS.md  LITERATURE_AUDIT_PUNCTURED_MOORE.md  LITERATURE_QUERY_LOG_NEXT_DIRECTIONS.md  NEXT_DIRECTION_SOURCE_MATRIX.json  NEXT_RESEARCH_PRIORITIES.md  NONADJACENT_DIRECT_SUM_AUDIT.md  NONADJACENT_PUNCTURED_MOORE.md  ORIGINAL_STATEMENT.md  PRIME_FIELD_DIAMETER_THREE_OBSTRUCTION.md  PROBLEM_BRIEF.md  REGULAR_LOW_DEGREE_OBSTRUCTION.md  SPECTRAL_MOORE_COMPARISON.md  TWO_SIDED_LP_CEILING.md  UNBOUNDED_DEGREE_NECESSITY.md  V2_GATE_CLOSURE_STATUS.md  V2_REQUIRED_AUDIT_GATES.md  VERIFIED_RESEARCH_EXTENSIONS.md
results/: README.md  adjacency_matrix.csv  distance_matrix.csv  edges.csv  verification.json  verification_40.json
(+232 files in other folders)
